<resources>
    <string name="app_name">Aston_Intensiv_4</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_b">FRAGMENT B</string>
    <string name="back">Back</string>
    <string name="open_fragment_c">Open fragment C</string>
    <string name="fragment_c">FRAGMENT C</string>
    <string name="open_fragment_d">Open fragment D</string>
    <string name="reset_to_fragment_a">Reset to fragment A</string>
    <string name="fragment_d">FRAGMENT D</string>
    <string name="reset_to_fragment_b">Reset to fragment B</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="save">Save</string>
    <string name="profile_image">Profile image</string>
</resources>